# oran-testbed

./: .env  .gitignore  README.md  docker-compose.core.yml  docker-compose.monitoring.yml  docker-compose.pubsub.yml  docker-compose.uhd.yml  docker-compose.zmq.yml
configs/: gnb_uhd.yml  gnb_uhd_compose_config.yml  gnb_zmq.yml  gnb_zmq_compose_config.yml
docs/: ARCHITECTURE.md  RUNBOOK_E2E_ZMQ.md  SETUP.md
docs/notes/e2_kpm/: e2sm-kpm-offerings.md  e2sm-kpm-per-ue-cqi-rsrp-rsrq-zero.md
monitoring/: .env
monitoring/grafana/dashboards/: e2e_ue_kpm_gnb_kafka.json  kpm_kafka.json  multi_ue_traffic_kafka.json
open5gs/: open5gs-5gc.template.yml  open5gs.env  open5gs_entrypoint.sh  subscriber_db.csv
pubsub/consumer/: Dockerfile  consumer.py  sinks.py
ric/: .env  README.md  docker-compose.yml
ric/e2-agents/srsRAN/: gnb_zmq.yaml
ric/ric/images/ric-plt-xapp-frame-py/: Dockerfile
ric/xApps/python/: kpm_mon_xapp.py  simple_mon_xapp.py  simple_xapp.py
ric/xApps/python/lib/: influx_writer.py  metrics_publisher.py  metrics_writer.py  xAppBase.py
scripts/: add_user.sh  dockstatus.sh  manage.sh  net_manage.sh  ocudu_performance.sh  update_slice.sh  vm_ocudu_performance.sh
src/ocudu/: .clang-tidy  .gdbinit  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .memcheck-suppressions  .yamllint  CONTRIBUTING.md  README.md  commands.md  radr_changelog.md
src/ocudu/.githooks/: README.md  pre-commit
src/ocudu/.github/workflows/: ccpp.yml  docker.yml
src/ocudu/.gitlab/: README.md  main.tf
src/ocudu/.gitlab/ci/: build.yml  deploy.yml
src/ocudu/.gitlab/ci-shared/: docker.yml  python.yml  version_check.yml  workflow.yml
src/ocudu/.gitlab/merge_request_templates/: fapi_team.md
src/ocudu/.reuse/: annotate-env.txt  annotate-exclude.txt
src/ocudu/.reuse/templates/: header-alt.jinja2  header-pruned.jinja2
src/ocudu/apps/cu/: cu_appconfig_cli11_schema.cpp
src/ocudu/apps/cu_up/: cu_up_appconfig.h  cu_up_appconfig_cli11_schema.cpp
src/ocudu/apps/du/: du.cpp
src/ocudu/apps/gnb/: gnb_appconfig_validators.cpp
src/ocudu/configs/: amf.yml  cu.yml  cu_cp.yml  cu_up_multiple_cps.yml  du_rf_b200_tdd_n78_20mhz.yml  gnb_rf_b200_tdd_n78_20mhz.yml  gnb_rf_b210_fdd_srsUE.yml  gnb_rf_n310_fdd_n3_20mhz.yml  gnb_ru_picocom_scb_tdd_n78_20mhz.yml  gnb_ru_ran550_tdd_n78_100mhz_4x2.yml  gnb_ru_rpqn4800e_tdd_n78_20mhz_2x2.yml  gnb_uhd.yml  gnb_zmq.yml  gnb_zmq_compose_config.yml  mobility.yml  qos.yml  readme.md  sibs.yml
src/ocudu/docker/: Dockerfile  docker-compose.split.yml  docker-compose.yml  docker-compose.zmq.yml
src/ocudu/docker/open5gs/: Dockerfile  open5gs-5gc.template.yml  open5gs-5gc.yml  open5gs.env
src/ocudu/docker/scripts/: build_rohc.sh  build_uhd.sh  install_dependencies.sh  install_docker_dependencies.sh  install_dpdk_dependencies.sh  install_rohc_dependencies.sh  install_uhd_dependencies.sh
src/ocudu/docs/: .env  README.md  docker-compose.yml  zmq-e2e-runbook.md
src/ocudu/docs/doxygen/: CMakeGenerateTeXMacros.txt  CMakeLists.txt  REUSE.toml  acronyms.dox  header.html  main.dox
src/ocudu/docs/journal/: 20260610-gnb-amf-config-schema-singular-vs-plural.md  20260610-gnb-image-missing-libmkl-rt.md  20260610-ue-no-internet-upf-masquerade-missing.md  README.md  TEMPLATE.md  (+5 more)
src/ocudu/lib/: CMakeLists.txt
src/ocudu/multi_ue/: .env  docker-compose.yaml
src/ocudu/scripts/: docker_cleanup.sh  get_5gc_live_config.sh  get_open5gs_subscribers.sh  net_manage.sh
src/ocudu/tests/unittests/apps/units/flexible_du/du_high/: CMakeLists.txt  du_high_remote_commands_test.cpp
src/ocudu/tests/unittests/ntn/: CMakeLists.txt  coordinate_converter_test.cpp  ephemeris_info_converter_test.cpp  keplerian_propagator_test.cpp  ntn_assistance_info_gen_test.cpp  ntn_math_helpers_test.cpp  reference_frame_converter_test.cpp  rk4_propagator_test.cpp
src/ocudu/tests/unittests/radio/realtime_loopback/: CMakeLists.txt  radio_realtime_loopback_validator_test.cpp
tracks/creating-2-slice-solution/: plan.md
tracks/metrics_publishing/: e2e_testing_plan.md  kafka_grafana_implementation_report.md  kafka_grafana_rollout_plan.md
ue/multi_ue/: .env  Dockerfile  README.md  docker-compose.yaml
ue/multi_ue/config/: generate_ue_conf.py  multi_ue_scenario.py  run_all_scenarios.sh  start_ue.sh  ue_export.py
(+716 files in other folders)
